[project]
name = "pyrodeen"
version = "0.0.1"
dependencies = [
  "numpy"
]
authors = [
  { name="Genis Bonet Garcia", email="gbonetgarcia@gmail.com" },
]
description = "Python module for rotating detonation engine simulations"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
pyrodeen = "pyrodeen.cli:main"

#[project.urls]
#Homepage = ""
#Issues = ""